<resources>
    <string name="app_name">GamePikachu</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="button_login">Start</string>
    <string name="edit_text_user" />
    <string name="edit_text_password" />
    <string name="textview">POKEMON verson 1.1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Score</string>
    <string name="player">Halo</string>
    <string name="new_game">New Game</string>
    <string name="pause">Pause</string>
    <string name="exit">Exit</string>
    <string name="success">Success</string>
    <string name="turn">Turn</string>
    <string name="YouWinTextView">You Win</string>
</resources>